fix nav bar position, horizontal scrolling

--- a/public/css/verbal.css
+++ b/public/css/verbal.css
@@ -45,6 +45,13 @@ font-family: 'Karla', sans-serif;
 margin-left: 3px;
 }
 
+/*.nav{
+  margin-top: -29px;
+  border: 2px solid;
+  border-color: black;
+  width: 100%;
+}*/
+
 
 ul{
     list-style-type: none;
@@ -52,6 +59,10 @@ ul{
 
 li{
   margin-left: -25px;
+}
+
+.factory{
+
 }
 
 .back1{
@@ -62,7 +73,7 @@ li{
     ),
     url('image1.jpg');
     opacity: .8;
-  height: 766px;
+  height: 642px;
   width: 100%;
 }
 
@@ -86,7 +97,7 @@ li{
 }
 
 .saying{
-  padding-top: 236px;
+  padding-top: 160px;
   overflow: hidden;
 }
 
@@ -113,27 +124,27 @@ li{
   border-radius: gray;
   border-color: lightgray;
   box-shadow: 0px 0px 10px #888888;
-  width: 101%;
+  width: 100%;
 }
 
-.navbar-fixed {
+/*.navbar-fixed {
   top: 0;
   z-index: 100;
   position: fixed;
   width: 100%;
-}
+}*/
 
-html, body {
-	height: 4000px;
-}
+/*html, body {
+	height: 2000px;
+}*/
 
-.navbar-fixed {
+/*.navbar-fixed {
     top: 0;
     z-index: 100;
   position: fixed;
     width: 100%;
     height: 100px;
-}
+}*/
 
 #body_div {
 	top: 0;
